# ph0b0s

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  deny.toml
.github/workflows/: ci.yml
crates/ph0b0s-cli/: Cargo.toml
crates/ph0b0s-cli/src/: commands.rs  config.rs  lib.rs  main.rs  provider.rs  registry.rs  scan.rs  workspace.rs
crates/ph0b0s-cli/tests/: end_to_end.rs
crates/ph0b0s-cli/tests/canned/: cargo_audit_output.json  llm_toy_responses.json
crates/ph0b0s-core/: Cargo.toml
crates/ph0b0s-core/src/: detector.rs  error.rs  finding.rs  lib.rs  llm.rs  report.rs  scan.rs  severity.rs  store.rs  target.rs  tools.rs
crates/ph0b0s-detect-cargo-audit/: Cargo.toml
crates/ph0b0s-detect-cargo-audit/src/: lib.rs
crates/ph0b0s-detect-llm-toy/: Cargo.toml
crates/ph0b0s-detect-llm-toy/src/: lib.rs
crates/ph0b0s-llm-adk/: Cargo.toml
crates/ph0b0s-llm-adk/src/: agent.rs  config.rs  error.rs  lib.rs  mcp.rs  tools.rs  usage.rs
crates/ph0b0s-llm-adk/src/provider/: anthropic.rs  gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs
crates/ph0b0s-llm-adk/tests/: mcp_fixture.rs  ollama_live.rs
crates/ph0b0s-llm-adk/tests/fixtures/: fake_mcp.py
crates/ph0b0s-report/: Cargo.toml
crates/ph0b0s-report/src/: json.rs  lib.rs  markdown.rs  sarif.rs
crates/ph0b0s-report/src/snapshots/: ph0b0s_report__json__tests__json_three_findings.snap  ph0b0s_report__markdown__tests__markdown_empty.snap  ph0b0s_report__markdown__tests__markdown_three_findings.snap  ph0b0s_report__sarif__tests__sarif_three_findings.snap
crates/ph0b0s-storage/: Cargo.toml
crates/ph0b0s-storage/migrations/: 0001_init.sql
crates/ph0b0s-storage/src/: lib.rs  sqlite.rs
crates/ph0b0s-storage/tests/: on_disk.rs
crates/ph0b0s-test-support/: Cargo.toml
crates/ph0b0s-test-support/src/: fixtures.rs  lib.rs  mock_llm.rs  mock_tools.rs
docs/superpowers/plans/: 2026-04-26-real-providers-and-tool-loop.md
docs/superpowers/specs/: 2026-04-26-real-providers-and-tool-loop-design.md
fixtures/sample-rust-repo/: Cargo.toml
fixtures/sample-rust-repo/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
