[package]
name        = "xtask"
description = "ph0b0s CI helpers: vendor-coupling fitness function, etc."
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap     = { workspace = true }
regex    = { workspace = true }
walkdir  = { workspace = true }
anyhow   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
