[package]
name        = "ph0b0s-detect-cargo-audit"
description = "Smoke-test detector: subprocess wrapper around cargo audit --json"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }

[dependencies]
ph0b0s-core = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
schemars    = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
ulid        = { workspace = true }
cvss        = { workspace = true }

[dev-dependencies]
ph0b0s-test-support = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
