[package]
name        = "ph0b0s-report"
description = "ph0b0s reporters (SARIF 2.1.0, Markdown, JSON)"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }

[dependencies]
ph0b0s-core = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde-sarif = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
