[package]
name        = "ph0b0s-storage"
description = "ph0b0s SQLite-backed FindingStore"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }

[dependencies]
ph0b0s-core = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
ulid        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
ph0b0s-test-support = { workspace = true }
tempfile = { workspace = true }
