[package]
name        = "ph0b0s-test-support"
description = "ph0b0s test fixtures and mock implementations of seam traits"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }

[dependencies]
ph0b0s-core = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
ulid        = { workspace = true }
tempfile    = { workspace = true }
